Fix Java 8 stream collection usage